# my-workshop

./: .gitignore  AGENTS.md  Makefile  README.md  go.mod  my-workshop  pyproject.toml  workshop.my.yaml.example
.github/: dependabot.yml
.github/workflows/: tests.yml
cmd/my-workshop/: main.go
internal/additions/: additions.go  additions_test.go
internal/cli/: cli.go  cli_test.go
internal/testsupport/fakeworkshop/: fakeworkshop.go
internal/testsupport/gitenv/: gitenv.go
internal/workshop/: workshop.go  workshop_test.go
internal/worktree/: worktree.go  worktree_test.go
internal/yamlconfig/: yamlconfig.go  yamlconfig_test.go
my_workshop/: __init__.py  additions.py  cli.py  workshop.py  worktree.py  yaml_config.py
snap/: snapcraft.yaml
tests/: conftest.py  fakes.py  fixtures.py  git.py  test_additions.py  test_cli.py  test_workshop.py  test_worktree.py  test_yaml_config.py
