[project]
name = "my-workshop"
version = "0.1.0"
description = "Bootstrap, ignore, and start a workshop environment."
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
my-workshop = "my_workshop.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["my_workshop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
